# plotify

./: .gitignore  .prettierignore  AGENTS.md  README.md  arquitectura-atomica-de-escrituras.md  design.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.codegraph/: .gitignore
.specify/: feature.json  init-options.json  integration.json
labs/labs_escrituras/: .env.example  .gitignore  README.md  pyproject.toml
labs/labs_escrituras/docs/: escrituras-data-architecture-study.md  gestor-escrituras-logic.md  matriz-escritura-compraventa-readiness.md  mcp-agent-workflow.md  source-map.md  template-draft.md  variables-catalog.md
labs/labs_escrituras/scripts/lab_escrituras/: __init__.py  chunking.py  config.py  conversion_quality.py  db.py  document_converter.py  embeddings.py  export_reports.py  mcp_server.py  mcp_tools.py  ocr.py  pdf2md_cli.py  pdf_inspector.py  process_pending.py
labs/labs_escrituras/sql/: 001_bootstrap_lab.sql  002_reset_lab.sql  003_sample_queries.sql
labs/labs_escrituras/tests/: test_chunking.py  test_conversion_quality.py  test_db.py  test_document_converter.py  test_embeddings.py  test_mcp_tools.py  test_ocr.py  test_process_pending_quality.py
plotify_memori/: 00 - Home.md  ADR-001 - Adoptar Monorepo pnpm.md  ADR-002 - Supabase Migrations como Fuente Unica.md  ADR-003 - Contrato Next FastAPI via OpenAPI.md  ADR-004 - Variables Documentales Canonicas Anidadas.md  ADR-005 - Preview y Generacion Documental desde Backend.md  ADR-006 - Service Role con Validacion Tenant Explicita.md  Agent Tools LangGraph.md  (+40 more)
(+756 files in other folders)
