[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plotify-labs-escrituras"
version = "0.1.0"
description = "Local Plotify lab for legal PDF analysis and escritura template discovery."
requires-python = ">=3.13"
dependencies = [
  "mcp>=1.0.0",
  "psycopg[binary]>=3.3.0",
  "python-dotenv>=1.2.0",
  "supabase>=2.8.0",
  "openai>=2.0.0",
  "pytesseract>=0.3.13",
  "pypdf>=6.0.0",
  "pypdfium2>=5.0.0",
  "python-docx>=1.2.0",
]

[project.scripts]
plotify-escrituras-mcp = "lab_escrituras.mcp_server:main"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
